@@ -725,6 +725,15 @@ argument_list|)
 operator|->
 name|container
 decl_stmt|;
+name|GtkStyle
+modifier|*
+name|style
+init|=
+name|gtk_widget_get_style
+argument_list|(
+name|widget
+argument_list|)
+decl_stmt|;
 name|GdkRectangle
 name|arrow_rect
 decl_stmt|;
@@ -742,9 +751,10 @@ name|arrow_state
 decl_stmt|;
 if|if
 condition|(
+name|gtk_widget_get_window
+argument_list|(
 name|widget
-operator|->
-name|window
+argument_list|)
 operator|==
 name|event
 operator|->
@@ -802,8 +812,6 @@ name|event
 operator|->
 name|window
 argument_list|,
-name|widget
-operator|->
 name|style
 operator|->
 name|base_gc
@@ -833,8 +841,6 @@ name|event
 operator|->
 name|window
 argument_list|,
-name|widget
-operator|->
 name|style
 operator|->
 name|base_gc
@@ -887,8 +893,6 @@ expr_stmt|;
 block|}
 name|gtk_paint_arrow
 argument_list|(
-name|widget
-operator|->
 name|style
 argument_list|,
 name|event
@@ -1266,6 +1270,11 @@ decl_stmt|;
 name|GtkStyle
 modifier|*
 name|style
+init|=
+name|gtk_widget_get_style
+argument_list|(
+name|widget
+argument_list|)
 decl_stmt|;
 name|GdkColor
 name|color
@@ -1274,12 +1283,6 @@ name|PangoAttribute
 modifier|*
 name|attribute
 decl_stmt|;
-name|style
-operator|=
-name|widget
-operator|->
-name|style
-expr_stmt|;
 if|if
 condition|(
 name|entry
@@ -1614,6 +1617,15 @@ argument_list|(
 name|entry
 argument_list|)
 decl_stmt|;
+name|GtkStyle
+modifier|*
+name|style
+init|=
+name|gtk_widget_get_style
+argument_list|(
+name|widget
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|gtk_widget_get_direction
@@ -1623,20 +1635,15 @@ argument_list|)
 operator|==
 name|GTK_TEXT_DIR_RTL
 condition|)
-block|{
 name|arrow_rect
 operator|->
 name|x
 operator|=
-name|widget
-operator|->
 name|style
 operator|->
 name|xthickness
 expr_stmt|;
-block|}
 else|else
-block|{
 name|arrow_rect
 operator|->
 name|x
@@ -1649,15 +1656,12 @@ name|width
 operator|-
 literal|16
 operator|-
-name|widget
-operator|->
 name|style
 operator|->
 name|xthickness
 operator|*
 literal|2
 expr_stmt|;
-block|}
 name|arrow_rect
 operator|->
 name|y
@@ -1680,8 +1684,6 @@ name|allocation
 operator|.
 name|height
 operator|-
-name|widget
-operator|->
 name|style
 operator|->
 name|ythickness
